# unpm-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
scripts/: clap.patch  prepare.sh
src/: constants.rs  lib.rs
src/cli/: completion.rs  mod.rs
src/cli/main/: args.rs  mod.rs  unpm.rs  unpx.rs
src/cli/sub/: add.rs  complete.rs  dlx.rs  exec.rs  install.rs  list.rs  mod.rs  pm.rs  remove.rs  run.rs  update.rs
src/context/: config.rs  mod.rs
src/errors/: command.rs  config.rs  mod.rs  package_manager.rs  script_runner.rs
src/package_manager/: detect.rs  enums.rs  fs.rs  mod.rs  project.rs  search.rs  select.rs
src/package_manager/adaptors/: bun.rs  mod.rs  node.rs  npm.rs  pnpm.rs  yarn.rs  yarn_berry.rs
